@@ -24,7 +24,7 @@
   %p
     = link_to project_commit_path(@project, commit.id), class: 'commit_short_id' do
       = commit.short_id
-    = image_tag gravatar_icon(commit.author_email), class: "avatar s16", alt: ''
+    = image_tag avatar_icon(commit.author_email), class: "avatar s16", alt: ''
     %span.light
       = gfm escape_once(truncate(commit.title, length: 40))
     %span
