@@ -9,7 +9,7 @@
         author: {
           name: c.author_name,
           email: c.author_email,
-          icon: gravatar_icon(c.author_email, 20)
+          icon: avatar_icon(c.author_email, 20)
         },
         time: c.time,
         space: c.spaces.first,
