@@ -16,6 +16,6 @@
     = "##{snippet.id}"
     %span
       by
-      = image_tag gravatar_icon(snippet.author_email), class: "avatar avatar-inline s16"
+      = image_tag avatar_icon(snippet.author_email), class: "avatar avatar-inline s16"
       = snippet.author_name
       %span.light #{time_ago_in_words(snippet.created_at)} ago
